--- a/Thermal Gradient Analyses.Rmd
+++ b/Thermal Gradient Analyses.Rmd
@@ -24,6 +24,7 @@ library(forcats)
 library(gap)
 library(car)
 library(lmerTest)
+library(ggpubr)
 ```
 
 # Signing up to my google account and getting the data sheet
@@ -252,17 +253,19 @@ d<-data.frame(zonegradient = c(1,13), meantemptrial = c(20,40))
 temps$upr<-temps$meantempall+temps$sdtemptall
 temps$lwr<-temps$meantempall-temps$sdtemptall
 
-ggplot() +
+f1a<-ggplot() +
   geom_line(temps, mapping=aes(x=zonegradient, y=meantemptrial, color=as.factor(trial)), size=0.7)+
   geom_point(temps,mapping=aes(x=zonegradient,y=meantemptrial, color=as.factor(trial)), size=2, alpha=0.5)+
-  geom_line(temps, mapping=aes(x=zonegradient, y=meantempall), color="black", size=0.5)+
-  geom_ribbon(data=temps, mapping=aes(ymin = lwr, ymax = upr,x=zonegradient, y=meantempall), alpha = 0.7, color="black")+
+  geom_line(temps, mapping=aes(x=zonegradient, y=meantempall), color="black", size=1.3)+
+  geom_ribbon(data=temps, mapping=aes(ymin = lwr, ymax = upr,x=zonegradient, y=meantempall), alpha = 0.7, fill="#505050")+
   theme_classic()+
-  theme(text = element_text(size = 15), plot.title = element_text(size = (12)), strip.text.x = element_blank(),panel.spacing = unit(7, "mm"))+
+  theme(text = element_text(size = 19, color="black"), 
+    axis.text.x= element_text(color="black"), 
+    axis.text.y=element_text(color="black"), strip.text.x = element_blank(),panel.spacing = unit(7, "mm"))+
   labs(color="Trial")+ylab("Temperature (Celsius)")+xlab("Zone")+
   scale_x_continuous(breaks=c(1,2,3,4,5,6,7,8,9,10,11,12,13))+ 
-  geom_line(data = d, mapping =aes(x = zonegradient, y = meantemptrial), colour = "red", size=1.5, linetype="dashed")
-
+  geom_line(data = d, mapping =aes(x = zonegradient, y = meantemptrial), colour = "red", size=1, linetype="dashed")
+f1a
 ggsave(plot=last_plot(),filename="Temperature_trials.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
@@ -488,16 +491,18 @@ side3<-complete(side2, sides, fill=list(timesum=0)) %>%
   filter(sides=="Left") %>%
   mutate(proptime=timesum/ttime,
          proptransform=log(proptime/(1-proptime)),  #logit transformation
-         proptransform2=asin(sqrt(proptime))) %>% #arcsine transformation
-  filter(proptime!=0) %>%
+         proptransform2=asin(sqrt(proptime))) #arcsine transformation
+
+  side4<-side3%>%
+    filter(proptime!=0) %>%
   filter(proptime!=1)
 
 t.test(side3$proptime, mu=0.5, alternative="two.sided")
-t.test(side3$proptransform, mu=log(0.5/(1-0.5)), alternative="two.sided") #testign with logit
+t.test(side4$proptransform, mu=log(0.5/(1-0.5)), alternative="two.sided") #testign with logit
 t.test(side3$proptransform2, mu=asin(sqrt(0.5)), alternative="two.sided") #testing with arcsine
 
-
-shapiro.test(side3$proptransform)
+shapiro.test(side3$proptime)
+shapiro.test(side4$proptransform)
 shapiro.test(side3$proptransform2)
 
 
@@ -506,11 +511,28 @@ library("ggpubr")
 ggqqplot(side3$proptime, ylab = "Proportional time",
          ggtheme = theme_minimal())
 
-
-
 ggboxplot(side3$proptime, 
           ylab = "Weight (g)", xlab = FALSE,
           ggtheme = theme_minimal())
+
+
+ggqqplot(side4$proptransform, ylab = "Proportional time - logit",
+         ggtheme = theme_minimal())
+
+ggboxplot(side4$proptransform, 
+          ylab = "Weight (g)", xlab = FALSE,
+          ggtheme = theme_minimal())
+
+
+
+
+ggqqplot(side3$proptransform2, ylab = "Proportional time - arcsine",
+         ggtheme = theme_minimal())
+
+ggboxplot(side3$proptransform2, 
+          ylab = "Weight (g)", xlab = FALSE,
+          ggtheme = theme_minimal())
+
 
 
 
@@ -544,6 +566,49 @@ stat_summary(fun.data = mean_se,
 ggsave(plot=last_plot(),filename="OneSamplettest_2sides.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
+
+# Plotting data and averages
+side3b<-side3%>%
+  filter(ID!=45)%>%
+  group_by(sides) %>%
+  summarize(sideav=mean(proptime),sidesd=sd(proptime), n=length(proptime)) %>%
+  mutate(sidese=sidesd/sqrt(n))
+
+side3b$min95<-c(0.4275206,0.4552045)
+side3b$max95<-c(0.5447955, 0.5724794)
+
+## With SE
+ggplot(side3b, aes(y=sideav, x=sides ) )+
+    geom_jitter(side3, mapping=aes(x=sides, y=proptime, color=as.factor(ID)),shape=1, size=3, stroke=1.2, width=0.1) +
+  geom_point(size=3, color="black", position=position_nudge(x=0.2)) +geom_errorbar(aes(ymin=sideav-sidese, ymax=sideav+sidese), width=.2,
+                 position=position_nudge(x=0.2), color="black")  + theme_classic()+
+  #scale_color_manual(values=colors)+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + 
+   xlab("Side of the arena")+  ylab("Proportional time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
+ggsave(plot=last_plot(),filename="OneSamplettest_2sides_data_SE.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+## With 95% confidence intervals
+ggplot(side3b, aes(y=sideav, x=sides))+
+    geom_jitter(side3, mapping=aes(x=sides, y=proptime, color=as.factor(ID)),shape=1, size=3, stroke=1.2, width=0.08) +
+  geom_point( size=3,  position=position_nudge(x=0.2)) +
+  geom_errorbar(aes(ymin=min95, ymax=max95), width=.2, position=position_nudge(x=0.2))  + 
+  theme_classic()+
+ # scale_color_manual(values=c("#0571b0", "#ca0020"))+
+  theme(text = element_text(size = 19, color="black"), 
+    axis.text.x= element_text(color="black"), 
+    axis.text.y=element_text(color="black"), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + 
+   xlab("Side of the arena")+  ylab("Proportional time (s)") +geom_hline(yintercept = 0.5, linetype="dashed") + 
+  scale_x_discrete(labels=c("Colder" = "20-28", "Hotter" = "31-40"))
+
+ggsave(plot=last_plot(),filename="OneSamplettest_2sides_data_confint.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+
+
+
+
+
 # Plotting
 side3<-complete(side2, sides, fill=list(timesum=0)) %>%
   filter(!sides %in% c("Middle", "NA") )%>%
@@ -564,6 +629,46 @@ stat_summary(fun.data = mean_se,
    xlab("Side of the arena")+  ylab("Proportional cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
 
 ggsave(plot=last_plot(),filename="OneSamplettest_leftsides.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+# Plotting arscine-backtransformed data
+side2<- beh %>%
+  filter(trial.x!=10)%>%
+  group_by(stage, ID, sides) %>%
+  summarize(timesum=sum(time)) 
+
+side3<-complete(side2, sides, fill=list(timesum=0)) %>%
+  filter(!sides %in% c("Middle", "NA") )%>%
+  group_by(ID) %>%
+  mutate(ttime=sum(timesum)) %>%
+ # filter(sides=="Left") %>%
+  mutate(proptime=timesum/ttime,
+         proptransform=log(proptime/(1-proptime)),  #logit transformation
+         proptransform2=asin(sqrt(proptime))) #arcsine transformation
+
+  side4<-side3%>%
+    filter(proptime!=0) %>%
+  filter(proptime!=1)
+
+
+side5<-side4 %>%
+  group_by(sides) %>%
+  summarize(mean=mean(proptransform2), sd=sd(proptransform2), n=length(proptransform2)) %>%
+  mutate(se=sd/sqrt(n))
+
+side6<-(sin(side5[,2:5]))^2 %>%
+  mutate(sides=c("Left", "Right"))
+
+ggplot(side6, aes(y=mean, x=sides))+
+  geom_point(side=2) + 
+geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd), width=.2)+
+  scale_y_continuous(limits = c(0, 1))+
+  theme_classic()+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none")+ 
+   xlab("Side of the arena")+  ylab("Proportional cumulative time (s)") +
+  geom_hline(yintercept = 0.5, linetype="dashed")
+
+ggsave(plot=last_plot(),filename="OneSamplettest_2sides_arcsine.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
 
@@ -1030,7 +1135,6 @@ ggboxplot(half3$proptime,
 
 ### One-sample t-test: comparing all indivdidual proportions to 50%
 ```{r}
-
 half2<- beh %>%
   group_by(stage, ID, half) %>%
   summarize(timesum=sum(time)) 
@@ -1051,7 +1155,9 @@ half4<-half3 %>%
   filter(proptime!=1)
 
 
-
+sample<-half3 %>%
+  group_by(stage)%>%
+  summarize(n=length(ID))
 
 
 
@@ -1080,8 +1186,10 @@ ggboxplot(half3$proptime,
 ggboxplot(half4$proptime, 
           ylab = "Weight (g)", xlab = FALSE,
           ggtheme = theme_minimal())
+```
 
 
+```{r}
 # Plotting
 
 half3<-complete(half2, half, fill=list(timesum=0)) %>%
@@ -1108,8 +1216,44 @@ stat_summary(fun.data = mean_se,
   theme_classic()+
   theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none")+ 
    xlab("Side of the arena")+  ylab("Proportional cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
-
 ggsave(plot=last_plot(),filename="OneSamplettest_2halves.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+# Plotting data and averages
+half3b<-half3%>%
+  group_by(half) %>%
+  summarize(halfav=mean(proptime),halfsd=sd(proptime), n=length(proptime)) %>%
+  mutate(halfse=halfsd/sqrt(n))
+
+half3b$min95<-c(0.7377260, 0.1905804)
+half3b$max95<-c(0.8094196, 0.2622740)
+
+## With SE
+ggplot(half3b, aes(y=halfav, x=half ) )+
+    geom_jitter(half3, mapping=aes(x=half, y=proptime, color=as.factor(ID)),shape=1, size=3, stroke=1.2, width=0.1) +
+  geom_point(size=3, color="black", position=position_nudge(x=0.2)) +geom_errorbar(aes(ymin=halfav-halfse, ymax=halfav+halfse), width=.2,
+                 position=position_nudge(x=0.2), color="black")  + theme_classic()+
+  #scale_color_manual(values=colors)+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + 
+   xlab("Side of the arena")+  ylab("Proportional time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
+ggsave(plot=last_plot(),filename="OneSamplettest_2halves_data_SE.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
+
+
+## With 95% confidence intervals
+f1b<-ggplot(half3b, aes(y=halfav, x=half))+
+    geom_jitter(half3, mapping=aes(x=half, y=proptime, color=as.factor(ID)),shape=1, size=3, stroke=1.2, width=0.08) +
+  geom_point( size=3,  position=position_nudge(x=0.2)) +
+  geom_errorbar(aes(ymin=min95, ymax=max95), width=.2, position=position_nudge(x=0.2))  + 
+  theme_classic()+
+ # scale_color_manual(values=c("#0571b0", "#ca0020"))+
+  theme(text = element_text(size = 19, color="black"), 
+    axis.text.x= element_text(color="black"), 
+    axis.text.y=element_text(color="black"), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + 
+   xlab("Temperature range of arena's side (Celsius)")+  ylab("Proportional time (s)") +geom_hline(yintercept = 0.5, linetype="dashed") + 
+  scale_x_discrete(labels=c("Colder" = "20-28", "Hotter" = "31-40"))
+f1b
+
+ggsave(plot=last_plot(),filename="OneSamplettest_2halves_data_confint.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
 # Plotting
@@ -1133,6 +1277,46 @@ stat_summary(fun.data = mean_se,
 
 ggsave(plot=last_plot(),filename="OneSamplettest_leftsides.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
+
+
+# Plotting arscine-backtransformed data
+half2<- beh %>%
+  group_by(stage, ID, half) %>%
+  summarize(timesum=sum(time)) 
+
+half3<-complete(half2, half, fill=list(timesum=0)) %>%
+  filter(!half %in% c("Middle", "NA") )%>%
+  group_by(ID) %>%
+  mutate(ttime=sum(timesum)) %>%
+  #filter(half=="Hotter") %>%
+  filter(ID!=45) %>%
+  mutate(proptime=timesum/ttime,
+         proptransform=log(proptime/(1-proptime)),  #logit transformation
+         proptransform2=asin(sqrt(proptime)))# %>% #arcsine transformation
+  
+
+half4<-half3 %>%
+  filter(proptime!=0) %>%
+  filter(proptime!=1)
+
+side5<-half4 %>%
+  group_by(half) %>%
+  summarize(mean=mean(proptransform2), sd=sd(proptransform2), n=length(proptransform2)) %>%
+  mutate(se=sd/sqrt(n))
+
+side6<-(sin(side5[,2:5]))^2 %>%
+  mutate(sides=c("Colder", "Hotter"))
+
+ggplot(side6, aes(y=mean, x=sides))+
+  geom_point(side=2) + 
+geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd), width=.2)+
+  scale_y_continuous(limits = c(0, 1))+
+  theme_classic()+
+  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none")+ 
+   xlab("Side of the arena")+  ylab("Proportional cumulative time (s)") +
+  geom_hline(yintercept = 0.5, linetype="dashed")
+
+ggsave(plot=last_plot(),filename="OneSamplettest_2halves_arcsine.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
 
@@ -1276,12 +1460,16 @@ ggplot(behp, aes(y=meanall, x=stage) )+
 
 ggsave(plot=last_plot(),filename="Pref_alltemps.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
-ggplot(behpref, aes(x=stage, y=meantempall, color=stage)) +
-  geom_boxplot() +
+f1c<-ggplot(behpref, aes(x=stage, y=meantempall, color=stage)) +
+  geom_boxplot(color="black", size=1) +
+  geom_jitter(size=2, shape=1, stroke=1.2)+
   theme_classic()+
   scale_color_manual(values=colors)+
-  theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + xlab("Stage")+  ylab("Temperature (Celsius)")
+  theme(text = element_text(size = 19, color="black"), 
+    axis.text.x= element_text(color="black"), 
+    axis.text.y=element_text(color="black"), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + xlab("Stage")+  ylab("Temperature (Celsius)")
 
+f1c
 ggsave(plot=last_plot(),filename="Pref_alltemps_boxplot.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
@@ -1371,9 +1559,24 @@ ggsave(plot=last_plot(),filename="Prefcum_alltemps_median.jpg",  path="Outputs/E
 ```{r}
 kruskal.test(meantempall ~ stage, data = cumpref)
 
-
+sample<-cumpref %>%
+  group_by(stage)%>%
+  summarize(n=length(ID))
 
 ```
+
+# Composite figures for Manuscript
+
+```{r}
+ggarrange(f1a,
+          ggarrange(f1b,f1c, ncol=2, labels=c("B", "C"),font.label = list(size = 23)),
+          nrow=2,
+          labels="A", font.label = list(size = 23))
+
+ggsave(plot=last_plot(),filename="Fig1.jpg",  path="Outputs/Final composite figures/",width=14, height=14, units="in")
+
+```
+
 
 
 
@@ -1384,7 +1587,7 @@ kruskal.test(meantempall ~ stage, data = cumpref)
 
 #### Plots: proportional time
 
-```{r, eval=FALSE}
+```{r, eval=FALSE, echo=FALSE}
 
 ## Protonymphs
 
@@ -1454,7 +1657,7 @@ ggsave(plot=last_plot(),filename="Acummtimeprop_ind_trial_females.jpg",  path="O
 
 #### Plots: proportional Cumulative time
 
-```{r}
+```{r, eval=FALSE, echo=FALSE}
 acum<-beh %>%
   group_by(stage, meantempall) %>%
   summarize(acumsum=sum(time), acumprop=sum(proptime))
@@ -1491,7 +1694,7 @@ ggsave(plot=last_plot(),filename="Raw_all.jpg",  path="Outputs/Exploratory plots
 
 
 
-```{r}
+```{r, eval=FALSE, echo=FALSE}
 ### Protonymphs
 ggplot(protos3, aes(x=meantempall, y=proptime)) +geom_bar(stat="identity", fill="#ff7f00") + 
   theme_classic()+
@@ -1541,7 +1744,7 @@ ggsave(plot=last_plot(),filename="Acummtimeprop_trial_females.jpg",  path="Outpu
 ## Per trial
 
 
-```{r}
+```{r, eval=FALSE, echo=FALSE}
 #Trial 2
 t2<-beh %>% filter(trial.x==2)
 
@@ -1727,7 +1930,7 @@ ggsave(plot=last_plot(),filename="Half_deuto_avproptime2.jpg",  path="Outputs/Ex
 
 
 ## All stages at once
-```{r}
+```{r, eval=FALSE, echo=FALSE}
 behch<-beh%>%
   group_by(stage,half) %>%
   summarize(timesum=sum(time), proptimesum=sum(proptime), timeav=mean(time),timesd=sd(time), n=length(time), proptimeav=mean(proptime), proptimesd=sd(proptime), n2=length(proptime)) %>%
