--- a/Thermal Gradient Analyses.Rmd
+++ b/Thermal Gradient Analyses.Rmd
@@ -410,7 +410,7 @@ side3<-complete(side2, sides, fill=list(timesum=0)) %>%
 
 ggplot(side3, aes(y=proptime, x=as.factor(ID), fill=sides))+
   geom_bar(stat="identity", position="stack")+
-  #scale_fill_manual(values=colors)+
+  scale_fill_manual(values=c("#a6cee3", "#1f78b4"))+
    theme_classic()+
   theme(text = element_text(size = 15), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="bottom", axis.ticks.x =element_blank(), axis.text.x=element_blank())+ 
   facet_wrap(~stage,ncol=2, scales="free_x" )  + xlab("Side of the arena")+  ylab("Cumulative time (s)") +geom_hline(yintercept = 0.5, linetype="dashed")
@@ -569,13 +569,19 @@ ggsave(plot=last_plot(),filename="OneSamplettest_2sides.jpg",  path="Outputs/Exp
 
 # Plotting data and averages
 side3b<-side3%>%
-  filter(ID!=45)%>%
+  filter(ID!=45) %>%
+  filter(sides=="Left") %>%
   group_by(sides) %>%
   summarize(sideav=mean(proptime),sidesd=sd(proptime), n=length(proptime)) %>%
   mutate(sidese=sidesd/sqrt(n))
 
-side3b$min95<-c(0.4275206,0.4552045)
-side3b$max95<-c(0.5447955, 0.5724794)
+#side3b$min95<-c(0.4275206,0.4552045)
+#side3b$max95<-c(0.5447955, 0.5724794)
+
+side3b$min95<-0.4275206
+side3b$max95<-0.5447955
+
+
 
 ## With SE
 ggplot(side3b, aes(y=sideav, x=sides ) )+
@@ -589,8 +595,10 @@ ggsave(plot=last_plot(),filename="OneSamplettest_2sides_data_SE.jpg",  path="Out
 
 
 ## With 95% confidence intervals
+side3left<-side3%>%
+  filter(sides=="Left")
 ggplot(side3b, aes(y=sideav, x=sides))+
-    geom_jitter(side3, mapping=aes(x=sides, y=proptime, color=as.factor(ID)),shape=1, size=3, stroke=1.2, width=0.08) +
+    geom_jitter(side3left, mapping=aes(x=sides, y=proptime), color="snow4",shape=1, size=3, stroke=1.2, width=0.08) +
   geom_point( size=3,  position=position_nudge(x=0.2)) +
   geom_errorbar(aes(ymin=min95, ymax=max95), width=.2, position=position_nudge(x=0.2))  + 
   theme_classic()+
@@ -669,7 +677,6 @@ geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd), width=.2)+
   geom_hline(yintercept = 0.5, linetype="dashed")
 
 ggsave(plot=last_plot(),filename="OneSamplettest_2sides_arcsine.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
-
 
 
 
@@ -1090,6 +1097,7 @@ half3<-complete(half2, half, fill=list(timesum=0)) %>%
   filter(!half %in% c("Middle", "NA") )%>%
   mutate(ttime=sum(timesum),
          proptime=timesum/ttime)
+colors<-c("#e66101","#5e3c99" )
 
 ggplot(half3, aes(y=proptime, x=half,  fill=half))+
   geom_bar(stat="identity", position="stack")+
@@ -1221,12 +1229,17 @@ ggsave(plot=last_plot(),filename="OneSamplettest_2halves.jpg",  path="Outputs/Ex
 
 # Plotting data and averages
 half3b<-half3%>%
+  filter(half=="Hotter")%>%
   group_by(half) %>%
   summarize(halfav=mean(proptime),halfsd=sd(proptime), n=length(proptime)) %>%
   mutate(halfse=halfsd/sqrt(n))
 
-half3b$min95<-c(0.7377260, 0.1905804)
-half3b$max95<-c(0.8094196, 0.2622740)
+#half3b$min95<-c(0.7377260, 0.1905804)
+#half3b$max95<-c(0.8094196, 0.2622740)
+
+half3b$min95<-0.1905804
+half3b$max95<-0.2622740
+
 
 ## With SE
 ggplot(half3b, aes(y=halfav, x=half ) )+
@@ -1239,9 +1252,12 @@ ggplot(half3b, aes(y=halfav, x=half ) )+
 ggsave(plot=last_plot(),filename="OneSamplettest_2halves_data_SE.jpg",  path="Outputs/Exploratory plots/",width=7, height=7, units="in")
 
 
+half3hot<-half3 %>%
+  filter(half=="Hotter")
+
 ## With 95% confidence intervals
 f1b<-ggplot(half3b, aes(y=halfav, x=half))+
-    geom_jitter(half3, mapping=aes(x=half, y=proptime, color=as.factor(ID)),shape=1, size=3, stroke=1.2, width=0.08) +
+    geom_jitter(half3hot, mapping=aes(x=half, y=proptime),color="snow4", shape=1, size=3, stroke=1.2, width=0.08) +
   geom_point( size=3,  position=position_nudge(x=0.2)) +
   geom_errorbar(aes(ymin=min95, ymax=max95), width=.2, position=position_nudge(x=0.2))  + 
   theme_classic()+
@@ -1249,7 +1265,7 @@ f1b<-ggplot(half3b, aes(y=halfav, x=half))+
   theme(text = element_text(size = 19, color="black"), 
     axis.text.x= element_text(color="black"), 
     axis.text.y=element_text(color="black"), plot.title = element_text(size = (12)),panel.spacing = unit(7, "mm"),legend.position="none") + 
-   xlab("Temperature range of arena's side (Celsius)")+  ylab("Proportional time (s)") +geom_hline(yintercept = 0.5, linetype="dashed") + 
+   xlab("Temperature (Celsius)")+  ylab("Proportional time (s)") +geom_hline(yintercept = 0.5, linetype="dashed") + 
   scale_x_discrete(labels=c("Colder" = "20-28", "Hotter" = "31-40"))
 f1b
 
@@ -1574,6 +1590,14 @@ ggarrange(f1a,
           labels="A", font.label = list(size = 23))
 
 ggsave(plot=last_plot(),filename="Fig1.jpg",  path="Outputs/Final composite figures/",width=14, height=14, units="in")
+
+#Final figure
+ggarrange(f1b,f1c, ncol=1, labels=c("A", "B"), font.label = list(size = 23), label.x=0.12, align="v")
+
+ggsave(plot=last_plot(),filename="Fig1Final.jpg",  path="Outputs/Final composite figures/",width=18, height=20, units="cm")
+
+
+
 
 ```
 
